data/collection/fixes/descriptions/java/JDK-8172809
When I compile JavaFX using a local build of the JDK from jdk9/dev that includes the fix for JDK-8169197 I get the following compilation error:

modules/javafx.graphics/src/main/java/module-info.java:33: error: module not found: jdk.jsobject
module javafx.graphics {
^
1 error
